--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -9,4 +9,16 @@ server {
     proxy_pass http://cast_service:8000/api/v1/casts;
   }
 
+  location /api/v1/books {
+    proxy_pass http://book_service:8000/api/v1/books;
+  }
+
+  location /api/v1/auth {
+    proxy_pass http://auth_service:8000/api/v1/auth;
+  }
+
+  location /api/v1/users {
+    proxy_pass http://user_service:8000/api/v1/users;
+  }
+
 }
