--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -21,4 +21,8 @@ server {
     proxy_pass http://user_service:8000/api/v1/users;
   }
 
+  location /api/v1/orders {
+    proxy_pass http://order_service:8000/api/v1/orders;
+  }
+
 }
